Changed Apple text color to blue and fixed spacing

--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,7 @@ body {
   list-style: none;
   flex-wrap: wrap;
   justify-content: flex-end;
+  padding: 0;
 }
 
 .main-menu__item {
@@ -60,6 +61,10 @@ body {
   position: relative;
 }
 
+.main-menu__item .is-active {
+  color: #00acdc;
+}
+
 .is-active::after {
   content: ' ';
   position: absolute;
@@ -78,7 +83,7 @@ body {
 .main-menu ul li:hover::after {
   content: ' ';
   position: absolute;
-  bottom: -2px;
+  bottom: 0;
   left: 0;
   width: 100%;
   height: 1px;
